# uvie-rs

./: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml  test_replay_banana.rs
.github/workflows/: ci.yml  release.yml
UVieKey/: AppIcon.icns  Info.plist  Package.swift  README.md  build.sh
UVieKey/Sources/UVieKey/App/: UVieKeyApp.swift
UVieKey/Sources/UVieKey/Core/: AXTextInjector.swift  EngineBridge.swift  EventTap.swift  TextDiff.swift
UVieKey/Sources/UVieKey/Features/: ClipboardManager.swift  InputMethodManager.swift  MemoryManager.swift  SmartSwitchManager.swift
UVieKey/Sources/UVieKey/UI/: AppsPane.swift  MenuBarController.swift  OnboardingView.swift  SettingsWindow.swift
UVieKey/Sources/UVieKey/Utils/: Defaults.swift
benches/: perf.rs
docs/: engine-architecture.md  ffi-cleanup-plan.md  refactor-plan.md  refactor-prompt-reviewed.md
docs/criterion/uvie_telex/cluster/base/: estimates.json
docs/criterion/uvie_telex/cluster/new/: sample.json  tukey.json
docs/criterion/uvie_telex/cluster/report/: index.html
docs/criterion/uvie_telex/mixed/base/: estimates.json  sample.json
docs/criterion/uvie_telex/mixed/new/: tukey.json
docs/criterion/uvie_telex/mixed/report/: index.html
docs/criterion/uvie_telex/sentence/new/: estimates.json  sample.json  (+1 more)
include/: uvie.h
scripts/: gen_icon.py
src/: ARCHITECT.md  buffers.rs  composing.rs  diff.rs  engine.rs  ffi.rs  lib.rs  main.rs  modes.rs  modifier.rs  phonetics.rs  replay.rs  syllable.rs  tables.rs  tests.rs  tone_handler.rs  validation.rs
tests/: feed_diff_tests.rs  replay_tests.rs
(+117 files in other folders)
