[package]
name = "uvie"
version = "1.1.0"
edition = "2024"
description = "Ultra fast Vietnamese input method engine (Telex, VNI)"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thuupx/uvie-rs"
homepage = "https://github.com/thuupx/uvie-rs"
keywords = ["vietnamese", "ime", "telex", "vni", "input-method"]
categories = ["text-processing", "no-std::no-alloc"]
exclude = ["target/", "docs/"]

[dependencies]
arrayvec = "0.7"
heapless = { version = "0.8", optional = true }

[build-dependencies]
cbindgen = "0.29"

[dev-dependencies]
criterion = "0.5"
vi = "0.8"

[features]
default = ["std"]
std = []
heapless = ["dep:heapless"]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "uvie"
path = "src/main.rs"
required-features = ["std"]

[[bench]]
name = "perf"
harness = false
